@@ -4,6 +4,7 @@
 	* experimental: non-commutative graphs
 	* fixes for the way TensorSubspace deals with dtype, etc.
 	* CP_Map.krauses
+	* Superoperator.H and CP_Map.H to create adjoint channel
 
 === qitensor-0.11 (Dan Stahlke, 2013-05-11) ===
 	* superoperators module
